# Syntho

./: CMakeLists.txt  LICENSE  README.md
include/: Oscillator.h
src/: Oscillator.cpp  main.cpp
